# mpv-syncwatch

./: Cargo.toml  README.md
mpv-client-dyn/src/: ffi.rs  lib.rs
src/: config.rs  lib.rs  plugin.rs
