[package]
name = "mpv-syncwatch"
version = "0.1.0"
edition = "2024"

[lib]
name = "syncwatch"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.27"
mpv-client-dyn = "0.5.0"
rust_socketio = "0.6.0"
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
